feat(app): Update author profiles and layout components

--- a/content/english/presidents/11_김진호.md
+++ b/content/english/presidents/11_김진호.md
@@ -1,15 +1,15 @@
 ---
-title: 김가영
-weight: 5
-role: 6대 학회장
-intro: 주식쟁이 환영해요
+title: 김진호
+weight: 11
+role: 11대 학회장
+intro: 아자스
 education:
-  - 중앙대학교 경영학부·응용통계학과 졸업 예정
+  - 동국대학교 경제학과 졸업
 # former:
 #   - NCSOFT
 #   - 신한투자증권
-current:
-  - 구도자산운용 운용본부
+# current:
+#   - 구도자산운용 운용본부
 image: /images/avatar.png
 # social:
 #   - name: github
