--- a/content/english/presidents/1_김예찬.md
+++ b/content/english/presidents/1_김예찬.md
@@ -1,17 +1,21 @@
 ---
 title: 김예찬
-weight: 1                   # [중요] 정렬을 위한 순서 번호 (파일명의 숫자와 맞춤)
-role: "초대 학회장"            # [요청 1] 역할 구분
-career:                     # [요청 2] 경력 리스트 (배열 형태)
-  # - "현) OO 기업 개발자"
-  # - "전) XX 스타트업 근무"
-image: "/images/avatar.png"
-description: 김예찬
+weight: 1
+role: 초대 학회장
+intro: AI를 활용한 가치 창출에 관심이 많습니다.
+education:
+  - 한양대학교 파이낸스경영학과 졸업
+# former:
+#   - 코어16
+#   - 크래프트테크놀로지스
+current:
+  - PwC 삼일회계법인
+image: /images/avatar.png
 social:
-  - name: github
-    icon: fa-brands fa-github
-    link: https://github.com
+  # - name: github
+  #   icon: fa-brands fa-github
+  #   link: https://github.com/xxx
   - name: linkedin
     icon: fa-brands fa-linkedin
-    link: https://linkedin.com
+    link: https://www.linkedin.com/in/yechan-kim-9703b41bb
 ---
