--- a/content/english/presidents/3_이한울.md
+++ b/content/english/presidents/3_이한울.md
@@ -1,17 +1,21 @@
 ---
 title: 이한울
-weight: 3                   # [중요] 정렬을 위한 순서 번호 (파일명의 숫자와 맞춤)
-role: "4대 학회장"            # [요청 1] 역할 구분
-career:                     # [요청 2] 경력 리스트 (배열 형태)
-  # - "현) OO 기업 개발자"
-  # - "전) XX 스타트업 근무"
-image: "/images/avatar.png"
-description: 이한울
+weight: 3
+role: 4대 학회장
+intro: 엔믹스, 트와이스의 아버지 (논문이름임)
+education:
+  - 고려대학교 사회학·금융공학 졸업
+former:
+  - NCSOFT
+  - 신한투자증권
+current:
+  - 서울대학교 컴퓨터공학부 석박통합과정 (AIM Intelligence)
+image: /images/avatar.png
 social:
   - name: github
     icon: fa-brands fa-github
-    link: https://github.com
+    link: https://github.com/h-albert-lee
   - name: linkedin
     icon: fa-brands fa-linkedin
-    link: https://linkedin.com
+    link: https://www.linkedin.com/in/hanwoolalbert/
 ---
