--- a/content/english/presidents/4_박성은.md
+++ b/content/english/presidents/4_박성은.md
@@ -1,17 +1,22 @@
 ---
 title: 박성은
-weight: 4                  # [중요] 정렬을 위한 순서 번호 (파일명의 숫자와 맞춤)
-role: "5대 학회장"            # [요청 1] 역할 구분
-career:                     # [요청 2] 경력 리스트 (배열 형태)
-  # - "현) OO 기업 개발자"
-  # - "전) XX 스타트업 근무"
-image: "/images/avatar.png"
-description: 박성은
-social:
-  - name: github
-    icon: fa-brands fa-github
-    link: https://github.com
-  - name: linkedin
-    icon: fa-brands fa-linkedin
-    link: https://linkedin.com
+weight: 4
+role: 5대 학회장
+intro: 잘부탁드립니다!
+education:
+  - 한양대학교 경제금융학과 졸업
+  - 한양대학교 경제금융학과 석사과정
+# former:
+#   - NCSOFT
+#   - 신한투자증권
+# current:
+#   - 서울대학교 컴퓨터공학과 석박통합과정 (AIM Intelligence)
+image: /images/avatar.png
+# social:
+#   - name: github
+#     icon: fa-brands fa-github
+#     link: https://github.com/
+#   - name: linkedin
+#     icon: fa-brands fa-linkedin
+#     link: https://www.linkedin.com/
 ---
