--- a/content/english/presidents/6_정지휴.md
+++ b/content/english/presidents/6_정지휴.md
@@ -1,17 +1,20 @@
 ---
 title: 정지휴
-weight: 7                   # [중요] 정렬을 위한 순서 번호 (파일명의 숫자와 맞춤)
-role: "7대 학회장"            # [요청 1] 역할 구분
-career:                     # [요청 2] 경력 리스트 (배열 형태)
-  # - "현) OO 기업 개발자"
-  # - "전) XX 스타트업 근무"
-image: "/images/avatar.png"
-description: 정지휴
+weight: 6
+role: 7대 학회장
+intro: 잘부탁드립니다!
+education:
+  - 연세대학교 계량위험관리학과(QRM) 재학
+# former:
+# - NCSOFT
+# current:
+#   - XXX증권 YYY
+image: /images/avatar.png
 social:
-  - name: github
-    icon: fa-brands fa-github
-    link: https://github.com
+#   - name: github
+#     icon: fa-brands fa-github
+#     link: https://github.com/
   - name: linkedin
     icon: fa-brands fa-linkedin
-    link: https://linkedin.com
+    link: http://linkedin.com/in/jihyujung/
 ---
