--- a/content/english/presidents/12_최진우.md
+++ b/content/english/presidents/12_최진우.md
@@ -1,15 +1,15 @@
 ---
-title: 김가영
-weight: 5
-role: 6대 학회장
-intro: 주식쟁이 환영해요
+title: 최진우
+weight: 12
+role: 12대 학회장
+intro: 
 education:
-  - 중앙대학교 경영학부·응용통계학과 졸업 예정
+  - 경희대학교 산업경영공학과 재학
 # former:
 #   - NCSOFT
 #   - 신한투자증권
-current:
-  - 구도자산운용 운용본부
+# current:
+#   - 구도자산운용 운용본부
 image: /images/avatar.png
 # social:
 #   - name: github
