--- a/content/english/presidents/2_이재성.md
+++ b/content/english/presidents/2_이재성.md
@@ -1,17 +1,21 @@
 ---
 title: 이재성
-weight: 2                   # [중요] 정렬을 위한 순서 번호 (파일명의 숫자와 맞춤)
-role: "2대, 3대 학회장"            # [요청 1] 역할 구분
-career:                     # [요청 2] 경력 리스트 (배열 형태)
-  # - "현) OO 기업 개발자"
-  # - "전) XX 스타트업 근무"
-image: "/images/avatar.png"
-description: 이재성
+weight: 2
+role: 2대, 3대 학회장
+intro: 반갑습니다.
+education:
+  - 중앙대학교 경제학·금융공학 졸업
+# former:
+#   - 코어16
+#   - 크래프트테크놀로지스
+current:
+  - 메리츠증권 법인파생영업팀
+image: /images/avatar.png
 social:
-  - name: github
-    icon: fa-brands fa-github
-    link: https://github.com
-  - name: linkedin
-    icon: fa-brands fa-linkedin
-    link: https://linkedin.com
+  # - name: github
+  #   icon: fa-brands fa-github
+  #   link: https://github.com/xxx
+  # - name: linkedin
+  #   icon: fa-brands fa-linkedin
+  #   link: https://linkedin.com/in/xxx
 ---
