--- a/content/english/presidents/8_신인호.md
+++ b/content/english/presidents/8_신인호.md
@@ -1,15 +1,15 @@
 ---
-title: 김가영
-weight: 5
-role: 6대 학회장
-intro: 주식쟁이 환영해요
+title: 신인호
+weight: 8
+role: 8대 학회장
+intro: 
 education:
-  - 중앙대학교 경영학부·응용통계학과 졸업 예정
+  - 숭실대학교 컴퓨터공학과 졸업
 # former:
 #   - NCSOFT
 #   - 신한투자증권
 current:
-  - 구도자산운용 운용본부
+  - 키움증권
 image: /images/avatar.png
 # social:
 #   - name: github
