--- a/content/english/presidents/9_박세연.md
+++ b/content/english/presidents/9_박세연.md
@@ -2,7 +2,7 @@
 title: 박세연
 weight: 9
 role: 9대 학회장
-intro: 금융이 힘들면 엔지니어는 어떨까요
+intro: 로켓 연구하는 엔지니어입니다 반갑습니다로 바꿔주세요
 education:
   - 이화여자대학교 휴먼기계바이오공학부 졸업 예정
 # former:
