--- a/content/english/presidents/3_이한울.md
+++ b/content/english/presidents/3_이한울.md
@@ -9,8 +9,7 @@ former:
   - NCSOFT
   - 신한투자증권
 current:
-  - 서울대학교 컴퓨터공학부 석박통합과정 
-  / AIM Intelligence Senior ML Engineer
+  - 서울대학교 컴퓨터공학부 석박통합과정 / AIM Intelligence Senior ML Engineer
 image: /images/avatar.png
 social:
   - name: github
