--- a/content/english/presidents/11_김진호.md
+++ b/content/english/presidents/11_김진호.md
@@ -10,7 +10,7 @@ education:
 #   - 신한투자증권
 # current:
 #   - 구도자산운용 운용본부
-image: /images/김진호.jpg
+image: /images/김진호.png
 # social:
 #   - name: github
 #     icon: fa-brands fa-github
