--- a/content/english/presidents/3_이한울.md
+++ b/content/english/presidents/3_이한울.md
@@ -11,7 +11,7 @@ former:
   - 신한투자증권
 current:
   - AIM Intelligence Senior ML Engineer
-image: /images/avatar.png
+image: /images/presidents/leehanul.png
 social:
   - name: github
     icon: fa-brands fa-github
