--- a/content/english/presidents/9_박세연.md
+++ b/content/english/presidents/9_박세연.md
@@ -10,7 +10,7 @@ education:
 #   - 신한투자증권
 current:
   - VF Space Combustion Engineer
-image: /images/avatar.png
+image: /images/presidents/parkseyeon.jpeg
 social:
 #   - name: github
 #     icon: fa-brands fa-github
