--- a/content/english/presidents/10_최인열.md
+++ b/content/english/presidents/10_최인열.md
@@ -11,7 +11,7 @@ former:
 #   - 신한투자증권
 current:
   - 크래프트테크놀로지스 Researcher (AI/Quant)
-image: /images/avatar.png
+image: /images/presidents/inyeol_choi.jpeg
 social:
   - name: github
     icon: fa-brands fa-github
