--- a/content/english/presidents/5_김가영.md
+++ b/content/english/presidents/5_김가영.md
@@ -10,7 +10,7 @@ education:
 #   - 신한투자증권
 current:
   - 구도자산운용 운용본부
-image: /images/avatar.png
+image: /images/presidents/gayeong_kim.png
 # social:
 #   - name: github
 #     icon: fa-brands fa-github
