--- a/content/english/presidents/8_신인호.md
+++ b/content/english/presidents/8_신인호.md
@@ -10,7 +10,7 @@ education:
 #   - 신한투자증권
 current:
   - 키움증권
-image: /images/avatar.png
+image: /images/presidents/inho_shin.png
 # social:
 #   - name: github
 #     icon: fa-brands fa-github
