--- a/content/english/presidents/4_박성은.md
+++ b/content/english/presidents/4_박성은.md
@@ -11,7 +11,7 @@ education:
 #   - 신한투자증권
 # current:
 #   - 서울대학교 컴퓨터공학과 석박통합과정 (AIM Intelligence)
-image: /images/avatar.png
+image: /images/presidents/sungeun_park.png
 # social:
 #   - name: github
 #     icon: fa-brands fa-github
