--- a/content/english/presidents/1_김예찬.md
+++ b/content/english/presidents/1_김예찬.md
@@ -10,7 +10,7 @@ education:
 #   - 크래프트테크놀로지스
 current:
   - PwC 삼일회계법인
-image: /images/avatar.png
+image: /images/presidents/yechan_kim.png
 social:
   # - name: github
   #   icon: fa-brands fa-github
