--- a/content/english/presidents/2_이재성.md
+++ b/content/english/presidents/2_이재성.md
@@ -10,7 +10,7 @@ education:
 #   - 크래프트테크놀로지스
 current:
   - 메리츠증권 법인파생영업팀
-image: /images/avatar.png
+image: /images/presidents/jaesung_lee.jpg
 social:
   # - name: github
   #   icon: fa-brands fa-github
