--- a/content/english/presidents/6_정지휴.md
+++ b/content/english/presidents/6_정지휴.md
@@ -9,7 +9,7 @@ education:
 # - NCSOFT
 # current:
 #   - XXX증권 YYY
-image: /images/avatar.png
+image: /images/presidents/jeehyu_jung.png
 social:
 #   - name: github
 #     icon: fa-brands fa-github
